[tool.poetry]
name = "move"
version = "0.1.0"
description = "Move action for prepare assignment"
authors = ["Bonajo <m.bonajo@fontys.nl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "move"}]

[tool.poetry.dependencies]
python = "^3.8"
prepare-toolbox = "0.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
